public/v/release-4.5/_sources/repositories_and_packages/isaac_ros_teleop/isaac_ros_teleop/index.rst.txt
==============
|package_name|
==============

:ir_github:`<isaac_ros_teleop> <isaac_ros_teleop>`

Quickstart
----------

Prerequisites
^^^^^^^^^^^^^

This quickstart has been tested and qualified on **Jetson AGX Thor** and **x86_64**.

- `PICO 4 Ultra <https://www.picoxr.com/global/products/pico4-ultra>`__ or
  `Meta Quest 3 <https://www.meta.com/quest/quest-3/>`__ headset
-  If no XR headset is available, the emulator provided by `Isaac Teleop Core <https://nvidia.github.io/IsaacTeleop>`__ can be used instead
- A stable network connection meeting the `CloudXR network requirements <https://docs.nvidia.com/cloudxr-sdk/latest/requirement/network_setup.html>`__

Set Up Development Environment
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. include:: /_snippets/set_up_dev_env.rst

Build |package_name|
^^^^^^^^^^^^^^^^^^^^

#. Install and build |package_name|:

   .. tabs::

      .. tab:: Binary Package

         #. Activate the Isaac ROS environment:

            .. code:: bash

               isaac-ros activate

         #. Install the prebuilt Debian package:

            :ir_apt:

            .. code:: bash

               sudo apt-get install -y ros-:ir_ros_distro:-isaac-ros-teleop

      .. tab:: Build from Source

         #. Install Git LFS:

            .. code:: bash

               sudo apt-get install -y git-lfs && git lfs install

         #. Clone this repository under ``${ISAAC_ROS_WS}/src``:

            .. code:: bash

               cd ${ISAAC_ROS_WS}/src && \
                  git clone --recurse-submodules :ir_clone:`<isaac_ros_teleop>`

         #. Activate the Isaac ROS environment:

            .. code:: bash

               isaac-ros activate

         #. Use ``rosdep`` to install the package's dependencies:

            :ir_apt:

            .. code:: bash

               rosdep update && rosdep install --from-paths ${ISAAC_ROS_WS}/src/isaac_ros_teleop/isaac_ros_teleop --ignore-src -y

         #. Build the package from source:

            .. code:: bash

               cd ${ISAAC_ROS_WS}/ && \
                  colcon build --symlink-install --packages-up-to isaac_ros_teleop --base-paths ${ISAAC_ROS_WS}/src/isaac_ros_teleop/isaac_ros_teleop

         #. Source the ROS workspace:

            .. note::

               Repeat this step in **every** terminal created inside the Isaac ROS environment. Because you built this package from source, you must source the enclosing workspace for ROS to find the package's contents.

            .. code:: bash

               source install/setup.bash

.. include:: /_snippets/cloudxr_server_setup.rst

Run Launch File
^^^^^^^^^^^^^^^

#. Run the following launch file to spin up a demo of this package:

   .. code:: bash

      ros2 launch isaac_ros_teleop isaac_ros_teleop.launch.py

Visualize Results
^^^^^^^^^^^^^^^^^

#. Open a **new** terminal and activate the Isaac ROS environment:

   .. code:: bash

      isaac-ros activate

#. Install ``RViz``:

   .. code:: bash

      sudo apt install -y ros-:ir_ros_distro:-rviz2
      source /opt/ros/:ir_ros_distro:/setup.bash

#. Open ``RViz``:

   .. code:: bash

      rviz2

   Then set the ``Fixed Frame`` to ``world``. Then click on the ``Add`` button,
   select ``By display type``, and choose ``TF`` under ``rviz_default_plugins``.

#. With the controllers in your hands, start moving them. You should see the frames track your movements:

   .. figure:: :ir_lfs:`<resources/isaac_ros_docs/repositories_and_packages/isaac_ros_teleop/isaac_ros_teleop_rviz_quickstart.gif>`
       :width: 600px
       :align: center

   .. note::

      The frames are converted to match `ROS frame convention <https://www.ros.org/reps/rep-0103.html>`__.
      Therefore, the poses are re-oriented from Right-Up-Back orientation to
      Forward-Left-Up for the x, y and z axes respectively.

.. include:: /repositories_and_packages/isaac_ros_teleop/_snippets/controller_reference.rst

Troubleshooting
---------------

Isaac ROS Troubleshooting
^^^^^^^^^^^^^^^^^^^^^^^^^

For solutions to problems with Isaac ROS, see :doc:`troubleshooting </troubleshooting/index>`.

API
----

Usage
^^^^^

.. code:: bash

   ros2 launch isaac_ros_teleop isaac_ros_teleop.launch.py

ROS Parameters
^^^^^^^^^^^^^^

.. list-table::
   :header-rows: 1

   * - Launch Argument
     - Type
     - Default
     - Description

   * - ``ee_pose_topic``
     - ``string``
     - ``xr_teleop/ee_poses``
     - Topic name for published end-effector poses (``geometry_msgs/PoseArray``).
   
   * - ``root_twist_topic``
     - ``string``
     - ``xr_teleop/root_twist``
     - Topic name for published root velocity command (``geometry_msgs/TwistStamped``).

   * - ``root_pose_topic``
     - ``string``
     - ``xr_teleop/root_pose``
     - Topic name for published root pose command (``geometry_msgs/PoseStamped``).

   * - ``finger_joints_topic``
     - ``string``
     - ``xr_teleop/finger_joints``
     - Topic name for the retargeted finger joints (``sensor_msgs/JointState``).

   * - ``controller_data_topic``
     - ``string``
     - ``xr_teleop/controller_data``
     - Topic name for raw msgpack-encoded controller state (``std_msgs/ByteMultiArray``)

   * - ``rate_hz``
     - ``double``
     - ``60.0``
     - The publishing rate in Hz.

   * - ``world_frame``
     - ``string``
     - ``world``
     - World frame for message headers and TF parent frame.

   * - ``right_wrist_frame``
     - ``string``
     - ``right_wrist``
     - TF child frame name for the right wrist.

   * - ``left_wrist_frame``
     - ``string``
     - ``left_wrist``
     - TF child frame name for the left wrist.

   * - ``left_finger_joint_names``
     - ``string``
     - ``["left_hand_thumb_0_joint","left_hand_thumb_1_joint","left_hand_thumb_2_joint","left_hand_index_0_joint","left_hand_index_1_joint","left_hand_middle_0_joint","left_hand_middle_1_joint"]``
     - Left-hand finger joint names in TriHand retargeter order: thumb_rotation, thumb_proximal,
       thumb_distal, index_proximal, index_distal, middle_proximal, middle_distal.

   * - ``right_finger_joint_names``
     - ``string``
     - ``["right_hand_thumb_0_joint","right_hand_thumb_1_joint","right_hand_thumb_2_joint","right_hand_index_0_joint","right_hand_index_1_joint","right_hand_middle_0_joint","right_hand_middle_1_joint"]``
     - Right-hand finger joint names in TriHand retargeter order: thumb_rotation, thumb_proximal,
       thumb_distal, index_proximal, index_distal, middle_proximal, middle_distal.

   * - ``transform_rotation``
     - ``string``
     - ``[0.5, -0.5, -0.5, 0.5]``
     - Quaternion ``[qx, qy, qz, qw]`` to rotate XR poses into the ROS world frame.
       Defaults to the Right-Up-Back orientation to Forward-Left-Up.

   * - ``transform_translation``
     - ``string``
     - ``[0.0, 0.0, 0.0]``
     - Translation ``[x, y, z]`` applied to XR poses after rotation.

ROS Topics Published
^^^^^^^^^^^^^^^^^^^^

.. list-table::
   :header-rows: 1

   * - ROS Topic
     - Interface
     - Description

   * - ``ee_pose_topic``
     - `geometry_msgs/PoseArray <https://github.com/ros2/common_interfaces/blob/:ir_ros_distro:/geometry_msgs/msg/PoseArray.msg>`__
     - The poses of the wrists or end-effectors, given in order of right wrist and then left wrist.

   * - ``root_twist_topic``
     - `geometry_msgs/TwistStamped <https://github.com/ros2/common_interfaces/blob/:ir_ros_distro:/geometry_msgs/msg/TwistStamped.msg>`__
     - The root twist command.

   * - ``root_pose_topic``
     - `geometry_msgs/PoseStamped <https://github.com/ros2/common_interfaces/blob/:ir_ros_distro:/geometry_msgs/msg/PoseStamped.msg>`__
     - The root pose command.

   * - ``finger_joints_topic``
     - `sensor_msgs/JointState <https://github.com/ros2/common_interfaces/blob/:ir_ros_distro:/sensor_msgs/msg/JointState.msg>`__
     - The retargeted finger joint angles for the robot.

   * - ``controller_data_topic``
     - `std_msgs/ByteMultiArray <https://github.com/ros2/common_interfaces/blob/:ir_ros_distro:/std_msgs/msg/ByteMultiArray.msg>`__
     - Raw controller state encoded as msgpack. Contains button, trigger, thumbstick,
       and pose data for each controller.

   * - ``tf``
     - `tf2_msgs/TFMessage <https://github.com/ros2/geometry2/blob/ros2/tf2_msgs/msg/TFMessage.msg>`__
     - Poses of the wrists with respect to the world frame ``world_frame``.

.. |package_name| replace:: ``isaac_ros_teleop``

